--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
   
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Please Register</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign Up</p>
   
                   <form onSubmit = "return checkPassword(this)" class="mx-1 mx-md-4" action="/register" method="post">
   
